--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>GSAP Vite App</title>
   </head>
   <body>
+    <div
+      data-aos="flip"
+      data-aos-offset="200"
+      data-aos-easing="ease-in-out"
+    > mi animo? </div>
     <div id="app"></div>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
